--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -95,4 +95,4 @@
 
 <script src="/socket.io/socket.io.js"></script>
 
-<script src="./static/js/main.js"></script>
+<script src="/static/js/main.js"></script>
