actualizacion de deleteProducto id

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -60,7 +60,7 @@
 
             <form id="realTimeFormDelete">
                 <label class="form-label m-0">ID:</label>
-                <input class="form-control" type="number" name="id" id="id">
+                <input class="form-control" type="text" name="id" id="id">
                 <br>
                 <button class="btn btn-danger" type="submit">Eliminar</button>
             </form>
