--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,8 +9,7 @@
     <title>{{title}}</title>
 </head>
 <body>
-   
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
         <a href="../../">
             <img src="/static/imagenes/logo.png" width="50px" alt="logo"
@@ -24,13 +22,19 @@
                 <a class="nav-link" href="../../">Inicio</a>
             </li>
             <li class="nav-item ms-3 header__item">
-                <a class="nav-link active" href="../../realTimeProducts">RealTime</a>
+                <a class="nav-link" href="../../realTimeProducts">RealTime</a>
+            </li>
+            <li class="nav-item ms-3 header__item">
+                <a class="nav-link" href="../../productsList">Lista</a>
             </li>
             <li class="nav-item ms-3 header__item">
                 <a class="nav-link" href="../../form">Cargar</a>
             </li>
             <li class="nav-item ms-3 header__item">
                 <a class="nav-link" href="../../chat">Chat</a>
+            </li>
+            <li class="nav-item ms-3 header__item">
+                <a class="nav-link" href="../../cart/64d2e74c7121e48a5941e943">Cart</a>
             </li>
         </ul>
     </div>
