actualizacion de login and session

--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -3,6 +3,7 @@
 <br>
 
 <h1 class="text-center"><b id="username"></b> Chat</h1>
+{{>navbar}}
 
 <div style="display: flex; flex-direction: row; justify-content: space-around;">
     <div>
