--- a/src/views/form.handlebars
+++ b/src/views/form.handlebars
@@ -1,7 +1,9 @@
-
 <br>
 
 <h1 class="text-center">Carga de producto asincrono</h1>
+{{>navbar}}
+
+<br>
 
 <div style="display: flex; flex-direction: column; align-items: center;">
     <form action="./form" method="post">
