--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,6 +3,9 @@
 <br>
 
 <h1 class="text-center">Lista de productos asincronos</h1>
+{{>navbar}}
+
+<br>
 
 <div>
     <div style="display: flex; flex-wrap: wrap; justify-content: center;">
