--- a/src/views/productsList.handlebars
+++ b/src/views/productsList.handlebars
@@ -1,6 +1,7 @@
 <br>
 
 <h1 class="text-center">List products</h1>
+{{>navbar}}
 
 <div style="display: flex; justify-content: center; flex-direction: row">
     <form id="form">
