--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -2,6 +2,7 @@
 <br>
 
 <h1 class="text-center">Lista de productos sincrono</h1>
+{{>navbar}}
 
 <div style="display: flex; flex-direction: row; justify-content: space-around;">
     <div style="display: flex;">
