--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,6 +1,7 @@
 <br>
 
 <h1 class="text-center"><b id="username"></b>Cart</h1>
+{{>navbar}}
 
 <div style="display: flex; justify-content: center;">
     <div class="card" style="width: 1200px;">
