correccion de implementacion de login

--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -25,6 +25,16 @@
             <li class="nav-item ms-3 header__item">
                 <a class="nav-link" href="../../cart/64d2e74c7121e48a5941e943">Cart</a>
             </li>
+            <li class="nav-item ms-3 header__item">
+                <a class="nav-link" href="/api/session/logout">
+                    <img src="https://i.ibb.co/j8FWHKq/switch-off.png" alt="shut-down" width="30px">
+                </a>
+            </li>
+            <li class="nav-item ms-3 header__item" style="margin-right: 24px;">
+                <a class="nav-link" href="#">
+                    <img src="https://i.ibb.co/3WdFcqG/profile.png" alt="profile" width="30px">
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
