--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,40 +1,5 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="container-fluid">
-        <a href="../../realTimeProducts">
-            <img src="/static/imagenes/logo.png" width="50px" alt="logo"
-                class="d-inline-block align-text-top me-3 header__img" />
-        </a>
-    </div>
-    <div class="d-flex collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav align-items-center header__lista">
-            <li class="nav-item ms-3 header__item">
-                <a class="nav-link" href="../../realTimeProducts">Products</a>
-            </li>
-            <li class="nav-item ms-3 header__item">
-                <a class="nav-link" href="../../productsList">List</a>
-            </li>
-            <li class="nav-item ms-3 header__item">
-                <a class="nav-link" href="../../chat">Chat</a>
-            </li>
-            <li class="nav-item ms-3 header__item">
-                <a class="nav-link" href="../../cart/64c9d325f54c08f61e2cddfe">Cart</a>
-            </li>
-            <li class="nav-item ms-3 header__item">
-                <a class="nav-link" href="/api/session/logout">
-                    <img src="https://i.ibb.co/j8FWHKq/switch-off.png" alt="shut-down" width="30px">
-                </a>
-            </li>
-            <li class="nav-item ms-3 header__item" style="margin-right: 24px;">
-                <a class="nav-link" href="#">
-                    <img src="https://i.ibb.co/3WdFcqG/profile.png" alt="profile" width="30px">
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
 
-<br>
-
+{{>navbar}}
 <h1 class="text-center">Profile</h1>
 
 <br>
